group 'org.xblackcat.adventofcode'
version '0.1-SNAPSHOT'

apply plugin: 'java'
apply plugin: 'idea'

sourceCompatibility = JavaVersion.VERSION_15

repositories {
    mavenCentral()
}

compileJava {
    options.encoding = 'UTF-8'
    options.compilerArgs += ['--enable-preview']
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
    options.compilerArgs += ['--enable-preview']
}

tasks.withType(JavaExec) {
    jvmArgs += '--enable-preview'
}

dependencies {
    compile group: 'net.sf.trove4j', name: 'core', version: '3.1.0'
}

idea {
    module {
        inheritOutputDirs = true
    }
}